# AI-Travel-Agent-Itinerary

./: .gitignore  README_Version2.md  app.py  elasticsearch.yaml  filebeat.yaml  k8s-deployment.yaml  kibana.yaml  logstash.yaml  pyproject.toml  setup.py
src/chains/: itenary_chain.py
src/core/: planner.py
