[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-TRAVEL-AGENT"
version = "0.1"
authors = [
    {name = "Hemanth"}
]
description = "AI-powered travel planning and booking system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-groq",
    "langchain-community",
    "langchain-core",
    "python-dotenv",
    "streamlit"
]

[tool.setuptools]
packages = {find = {}}
